# job-ad-skill-extraction

./: .gitignore  1_eda.ipynb  2a_sample_selection.ipynb  2b_esco_mapping.ipynb  3_evaluation.ipynb  4_evaluation_hf_dataset.ipynb  README.md  pyproject.toml
backend/: main.py
frontend/: README.md
frontend/src/app/: page.tsx
frontend/src/app/ads/[id]/: page.tsx
