[project]
name = "candidate-quality"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "ipykernel",
    "pandas",
    "numpy<2.0",
    "beautifulsoup4",
    "matplotlib",
    "seaborn",
    "spacy>=3.7,<4",
    "en-core-web-lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.7.1/en_core_web_lg-3.7.1-py3-none-any.whl",
    "sentence-transformers>=2.2.2",
    "scikit-learn>=1.3.0",
    "datasets",
    "python-dotenv",
    "rapidfuzz",
    "faiss-cpu",
    "accelerate>=1.12.0", # required by HF Trainer
    "torch>=2.1.0,<3.0", # PyTorch backend for Trainer # ensures Trainer works with PyTorch
    "transformers>=4.41.0,<5.0",
    "fastapi[standard]>=0.135.1",
    "uvicorn>=0.42.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
]
